# llama-nexus

./: .env  .gitignore  Cargo.toml  README.md  config.toml
.github/workflows/: build.yml  release.yml  test_server.yml
.sqlx/: query-1b4a42e5fd0a64598c8fddd46fb47fb8bcafedbd266e9409ce8e25909e14b0fc.json  query-2665caaad776381064a53ced6c32aab0aaf4be79ba9d6907a6514f1676f093ab.json  query-36160f287d7cb9d38e93f9c55a2acb6ff4181d6edd72565e3f08db9215cefeb3.json  query-69db11ca3997460bad8bfd0d26be29a99577a10bf47bd05168ac9139587f350e.json  query-6d180495c4292c42fd6a5ad49cc92d2b9fbfd079dcd0f5203120d2257d6fec1e.json  query-71ec46a18056b443dbb50c3c83d9f91cd2a1303dc18bd5373ad4b5d4f7572aca.json  query-780284ab510d87a2287ecf7e7a3e2b079d6feae637c152fde98e1d4300f3c4c4.json  query-7d7753535205a6f3c01322f4e8de184622337ae3d8f2bbd09702ed16147e41da.json  query-b347534064d54f62406858aeedba760a118f022e7ccd8e3de378dce5c06d0edd.json  query-b63a1f50faaeff5fab7c12e61c3158e3bf5ba6f6bfb154bbdb2a80432e716209.json
data/: memory.db
doc/: memory-configuration-guide-zh.md  memory-configuration-guide.md
src/: config.rs  error.rs  handlers.rs  main.rs  mcp.rs  server.rs
src/chat/: mod.rs  normal.rs  react.rs  utils.rs
src/memory/: manager.rs  mod.rs  store.rs  summarizer.rs  types.rs
src/responses/: db.rs  handlers.rs  mod.rs  models.rs
