[package]
name    = "LlamaNexus"
version = "0.8.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.82"
axum = { version = "^0.8", features = ["tokio", "http2", "multipart"] }
bitflags = "2.8.0"
bytes = "1.10.1"
chat-prompts = { version = "0.35.0" }
chrono = "0.4.41"
clap = { version = "^4.5", features = ["cargo", "derive"] }
config = { version = "^0.15", features = ["toml"] }
endpoints = { version = "0.35.0", features = ["whisper"] }
futures-util = "0.3"
http = "1.2"
md5 = "0.7"
mime_guess = "2.0.4"
once_cell = "1.18"
regex = "1.11.0"
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rmcp = { version = "0.6.3", features = [
    "client",
    "transport-sse-client-reqwest",
    "reqwest",
    "transport-streamable-http-client-reqwest",
    "tower",
    "auth",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["sqlite", "chrono", "runtime-tokio"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.13"
tower = { version = "^0.5", features = ["util"] }
tower-http = { version = "^0.6", features = ["trace", "cors", "request-id", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }

[[bin]]
name = "llama-nexus"
path = "src/main.rs"
